Add move.js and player_actions.js

--- a/heavenAndAle/HeavenAndAle.html
+++ b/heavenAndAle/HeavenAndAle.html
@@ -6,6 +6,7 @@
     <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
     <script type="text/javascript" src="../src/gameDialog.js"></script>
     <script type="text/javascript" src="../src/constants.js"></script>
     <script type="text/javascript" src="heavenAndAle.js"></script>
@@ -13,6 +14,8 @@
     <script type="text/javascript" src="rondel.js"></script>
     <script type="text/javascript" src="barrel.js"></script>
     <script type="text/javascript" src="boards.js"></script>
+    <script type="text/javascript" src="move.js"></script>
+    <script type="text/javascript" src="player_actions.js"></script>
     <script type="text/javascript" src="../src/handlePage.js"></script>
     <script type="text/javascript" src="../src/playerPicker.js"></script>
     <script type="text/javascript" src="../src/mathutils.js"></script>
@@ -20,6 +23,6 @@
     <script type="text/javascript" src="../src/shapeDrawer.js"></script> 
     </head>
     <body onload="heavenAndAle.onloadFunc()">
-        <canvas id="gameboard" width="1200px" height="600px" tabindex="0" style="border:1px solid"></canvas>   
+        <canvas id="gameboard" width="1200px" height="600px" tabindex="0" style="border:1px solid"></canvas>
     </body>
 </html>
